<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MapsActivity">

    <data>
        <variable
            name="model"
            type="com.example.a99minstest.data.entities.CodesMex" />
    </data>

 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15dp">

    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_CP"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/codigo_postal"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_CP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{model.codigoPostal}"
                android:enabled="true">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pais"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/mexico">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_entidad"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/entidad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_entidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@{model.entidad}">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ciudad"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/ciudad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginLeft="20dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@{model.ciudad}">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_alcaldia"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/alcaldia"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_alcaldia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@{model.alcaldia}">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_colonia"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/colonia"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginLeft="20dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_colonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@{model.colonia}">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        tools:context=".ui.main.MapsActivity" />

 </LinearLayout>


</layout>